# te-blog-back

./: .gitignore  .gitmoji-changelogrc  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements-debug.txt  requirements-docs.txt  requirements.txt
te_blog_backend/: __init__.py  asgi.py  urls.py  wsgi.py
te_blog_backend/settings/: __init__.py  base.py  django.py  email.py  environ.py  static_and_media.py
